style.css
@font-face {
    font-family: "norse";
    src: url(fonts/Norse-Bold.woff2) format("woff2");
    src: url(fonts/Norse-Bold.woff) format("woff");
}

* {
    padding: 0;
    margin: 0;
    font-family: "norse", sans-serif;


}

body {
    display: grid;
    grid-template-rows: 1fr 4fr;
    gap: 25px;
    background-image: url(images/Library.jpg);
    height: 100vh;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    position: relative;
    grid-auto-flow: column;
}

.header {
    grid-row-start: 1;
    grid-row-end: 2;
    display: flex;
    flex-direction: column;
    gap: 25px;
    justify-content: center;
    align-items: center;
    color: blue;
}



.library {
    grid-row-start: 2;
    grid-row-end: 7;
    display: grid;
    grid-auto-rows: 170px;
    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
    gap: 20px;
    justify-content: center;
    margin: 25px;
}



.book {
    width: 300px;
    height: 150px;
    padding: 8px;
    border: 1px solid white;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
    display: flex;
    flex-direction: column;
    border-radius: 5px;
    background-color: lightcoral;

}

.controls {
    display: flex;
    gap: 5px;
    padding-top: 15px;
}



.controls>button {
    width: 120px;
    background-color: #fafafa;
    border-radius: 15px;
    padding: 10px;
}

.read.unread {
    background-color: #E5E7EB;
    color: #374151;
}

.read.finished {
    background-color: lightgreen;
}

.header>button {
    width: 145px;
    background-color: lightcyan;
    color: black;
    padding: 10px;
    height: 35px;
    border-radius: 10px;
}

.dialogbox {
    width: 500px;
    height: 400px;
    padding: 20px;
    position: absolute;
    top: 30%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.dialogbox[open] {
    display: flex;
    flex-direction: column;
}

form {
    display: flex;
    flex-direction: column;
}

